--- a/style.css
+++ b/style.css
@@ -1,22 +1,72 @@
-@media only screen and (max-width: 320px) {
-.home_chart {
-    height: 320px;
+* {
+    margin: 0;
+    font-family: Ebrima, sans-serif;
 }
 
-
+@media only screen and (max-width: 320px) {
+    .home_chart {
+        min-height: 180px;
+        height: 60vh;
+    }
 }
 
 @media only screen and (max-width: 720px) and (min-width: 320px) {
     .home_chart {
-        height: 400px;
+        min-height: 180px;
+        height: 50vh;
     }
-
-
 }
 
 @media only screen and (min-width: 720px) {
+    html {
+        font-size: 22px;
+    }
+
+    #today_info {
+        margin: 0 auto;
+        height: 28vh;
+        width: 500px;
+        text-align: center;
+    }
+
+    #today_info > div {
+        width: 180px;
+        display: inline-block;
+    }
+
+    #today_info > div > h4 {
+        margin: 40px 0 0 0;
+    }
+
+    #today_title {
+        padding: 15px 0 0 0;
+    }
+
+    #today_hum {
+        float: left;
+    }
+
+    #today_temp {
+        float: right;
+    }
+
+    .now {
+        font-size: 1.2rem;
+    }
+
+    .high {
+        width: 72px;
+        float: left;
+    }
+
+    .low {
+        width: 72px;
+        float: right;
+    }
+
     .home_chart {
-        height: 460px;
+        min-height: 180px;
+        height: 35vh;
     }
 }
 
