--- a/style.css
+++ b/style.css
@@ -4,16 +4,146 @@
 }
 
 @media only screen and (max-width: 320px) {
+    html {
+        font-size: 22px;
+    }
+
+    #today_info {
+        margin: 0 auto;
+        height: 50vh;
+        text-align: center;
+    }
+
+    #today_info > div {
+        display: block;
+        width: 80%;
+        margin: 0 auto;
+        height: 20vh;
+    }
+
+    #today_info > div > h4 {
+        margin: 10px 0 0 0;
+    }
+
+    #today_title {
+        padding: 15px 0 0 0;
+    }
+
+    #today_hum {
+    }
+
+    #today_temp {
+    }
+
+    .now {
+        font-size: 1.2rem;
+    }
+
+    .high {
+        width: 72px;
+        float: left;
+    }
+
+    .low {
+        width: 72px;
+        float: right;
+    }
+
     .home_chart {
         min-height: 180px;
-        height: 60vh;
+        height: 50vh;
+    }
+
+    .chart_box {
+        display: grid;
+        grid-template-columns: 9fr 1fr;
+        grid-template-rows: 1fr;
+        gap: 1px 1px;
+        grid-template-areas: ". .";
+        width: 100%;
+    }
+
+    .history {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+
+    .history > button {
+        height: 60px;
+        width: 90%;
     }
 }
 
 @media only screen and (max-width: 720px) and (min-width: 320px) {
+    html {
+        font-size: 22px;
+    }
+
+    #today_info {
+        margin: 0 auto;
+        height: 50vh;
+        text-align: center;
+    }
+
+    #today_info > div {
+        display: block;
+        width: 300px;
+        margin: 0 auto;
+        height: 20vh;
+    }
+
+    #today_info > div > h4 {
+        margin: 10px 0 0 0;
+    }
+
+    #today_title {
+        padding: 15px 0 0 0;
+    }
+
+    #today_hum {
+    }
+
+    #today_temp {
+    }
+
+    .now {
+        font-size: 1.2rem;
+    }
+
+    .high {
+        width: 72px;
+        float: left;
+    }
+
+    .low {
+        width: 72px;
+        float: right;
+    }
+
     .home_chart {
         min-height: 180px;
         height: 50vh;
+    }
+
+    .chart_box {
+        display: grid;
+        grid-template-columns: 9fr 1fr;
+        grid-template-rows: 1fr;
+        gap: 1px 1px;
+        grid-template-areas: ". .";
+        width: 100%;
+    }
+
+    .history {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+
+    .history > button {
+        height: 60px;
+        width: 90%;
     }
 }
 
@@ -75,10 +205,18 @@
         grid-template-rows: 1fr;
         gap: 1px 1px;
         grid-template-areas: ". .";
+        width: 100%;
     }
 
     .history {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
 
+    .history > button {
+        height: 60px;
+        width: 90%;
     }
 }
 
